--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,17 +1,41 @@
 version: '3.3'
-services:
 
-  frontend:
-    container_name: foodgram-front
-    build: ../frontend
+services:
+  db:
+    image: postgres:15
+    container_name: foodgram-db
     volumes:
-      - ../frontend/:/app/result_build/
+      - postgres_data:/var/lib/postgresql/data/
+    env_file:
+      - ../backend/.env
+
+  backend:
+    container_name: foodgram-backend
+    build: ../backend
+    volumes:
+      - ../backend/:/app/
+      - static_data:/app/static/           # для collectstatic
+      - media_data:/app/media/             # для пользовательских медиа
+    depends_on:
+      - db
+    env_file:
+      - ../backend/.env
+
   nginx:
     container_name: foodgram-proxy
     image: nginx:1.25.4-alpine
     ports:
       - "80:80"
+    depends_on:
+      - backend
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
+      - static_data:/backend_static/              # админка
+      - media_data:/media/                        # медиа-файлы
       - ../docs/:/usr/share/nginx/html/api/docs/
+
+volumes:
+  postgres_data:
+  static_data:
+  media_data:
