--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -2,15 +2,36 @@ server {
     listen 80;
     client_max_body_size 10M;
 
+    location /api/ {
+        proxy_pass http://backend:8000/api/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    location /admin/ {
+        proxy_pass http://backend:8000/admin/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    location /backend_static/ {
+        alias /backend_static/;
+    }
+
+
+    location /media/ {
+        alias /media/;
+    }
+
+
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
-    
+
     location / {
         root /usr/share/nginx/html;
-        index  index.html index.htm;
+        index index.html index.htm;
         try_files $uri /index.html;
-      }
-
+    }
 }
