--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,4 @@
+gunicorn
 asgiref==3.8.1
 attrs==25.3.0
 certifi==2025.4.26
@@ -33,3 +34,4 @@ sqlparse==0.5.3
 typing_extensions==4.14.0
 uritemplate==4.2.0
 urllib3==2.4.0
+psycopg2-binary
