--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,8 +1,11 @@
-# build env
-FROM node:21.7.1-alpine
+# 1. Сборка фронта
+FROM node:21.7.1-alpine as build
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . ./
 RUN npm run build
-CMD cp -r build result_build
+
+# 2. Финальный nginx-образ
+FROM nginx:alpine
+COPY --from=build /app/build /usr/share/nginx/html
