--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,11 +1,29 @@
-# 1. Сборка фронта
-FROM node:21.7.1-alpine as build
+FROM node:21.7.1-alpine AS builder
 WORKDIR /app
+
 COPY package*.json ./
-RUN npm install
+
+RUN npm install --legacy-peer-deps
+
 COPY . ./
+
 RUN npm run build
 
-# 2. Финальный nginx-образ
-FROM nginx:alpine
-COPY --from=build /app/build /usr/share/nginx/html
+FROM nginx:alpine AS final
+WORKDIR /usr/share/nginx/html
+
+COPY --from=builder /app/build /usr/share/nginx/html
+
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+RUN mkdir -p /var/html/backend_static /var/html/backend_media
+
+RUN chown -R nginx:nginx /usr/share/nginx/html /var/html && \
+    chmod -R 755 /usr/share/nginx/html
+
+EXPOSE 80
+
+HEALTHCHECK --interval=30s --timeout=3s --start-period=10s --retries=3 \
+    CMD wget --quiet --tries=1 --spider http://localhost/ || exit 1
+
+CMD ["nginx", "-g", "daemon off;"]
