--- a/foodgram-chart/charts/postgresql/values.yaml
+++ b/foodgram-chart/charts/postgresql/values.yaml
@@ -3,6 +3,9 @@ auth:
   username: foodgram_user
   password: "change_me"
 
+externalSecrets:
+  enabled: false
+
 image:
   registry: ""
   repository: postgres
