--- a/foodgram-chart/Chart.yaml
+++ b/foodgram-chart/Chart.yaml
@@ -17,3 +17,15 @@ dependencies:
     version: "1.0.0"
     repository: "file://./charts/postgresql"
     condition: postgresql.enabled
+  - name: rabbitmq
+    version: "1.0.0"
+    repository: "file://./charts/rabbitmq"
+    condition: rabbitmq.enabled
+  - name: redis
+    version: "1.0.0"
+    repository: "file://./charts/redis"
+    condition: redis.enabled
+  - name: redisinsight
+    version: "1.0.0"
+    repository: "file://./charts/redisinsight"
+    condition: redisinsight.enabled
