--- a/foodgram-chart/charts/backend/templates/deployment.yaml
+++ b/foodgram-chart/charts/backend/templates/deployment.yaml
@@ -32,7 +32,14 @@ spec:
           done
         env:
         - name: PGPASSWORD
+          {{- if .Values.externalSecrets.enabled }}
+          valueFrom:
+            secretKeyRef:
+              name: postgres-credentials
+              key: password
+          {{- else }}
           value: {{ .Values.secrets.postgresPassword | quote }}
+          {{- end }}
       {{- if .Values.collectstatic.enabled }}
       - name: collectstatic
         image: {{ include "backend.image" . }}
@@ -46,13 +53,78 @@ spec:
             name: {{ include "backend.fullname" . }}-config
         env:
         - name: POSTGRES_PASSWORD
+          {{- if .Values.externalSecrets.enabled }}
+          valueFrom:
+            secretKeyRef:
+              name: postgres-credentials
+              key: password
+          {{- else }}
           value: {{ .Values.secrets.postgresPassword | quote }}
+          {{- end }}
         - name: SECRET_KEY
+          {{- if .Values.externalSecrets.enabled }}
+          valueFrom:
+            secretKeyRef:
+              name: django-credentials
+              key: secret-key
+          {{- else }}
           value: {{ .Values.secrets.djangoSecretKey | quote }}
+          {{- end }}
         - name: DEBUG
+          {{- if .Values.externalSecrets.enabled }}
+          valueFrom:
+            secretKeyRef:
+              name: django-credentials
+              key: debug
+          {{- else }}
           value: {{ .Values.secrets.debug | quote }}
+          {{- end }}
         - name: ALLOWED_HOSTS
+          {{- if .Values.externalSecrets.enabled }}
+          valueFrom:
+            secretKeyRef:
+              name: django-credentials
+              key: allowed-hosts
+          {{- else }}
           value: {{ .Values.secrets.allowedHosts | quote }}
+          {{- end }}
+        {{- if .Values.redis.enabled }}
+        - name: REDIS_PASSWORD
+          {{- if .Values.externalSecrets.enabled }}
+          valueFrom:
+            secretKeyRef:
+              name: redis-credentials
+              key: password
+          {{- else }}
+          value: {{ .Values.redis.password | quote }}
+          {{- end }}
+        {{- end }}
+        {{- if .Values.rabbitmq.enabled }}
+        - name: RABBITMQ_USERNAME
+          {{- if .Values.externalSecrets.enabled }}
+          valueFrom:
+            secretKeyRef:
+              name: rabbitmq-credentials
+              key: username
+          {{- else }}
+          value: {{ .Values.rabbitmq.username | quote }}
+          {{- end }}
+        - name: RABBITMQ_PASSWORD
+          {{- if .Values.externalSecrets.enabled }}
+          valueFrom:
+            secretKeyRef:
+              name: rabbitmq-credentials
+              key: password
+          {{- else }}
+          value: {{ .Values.rabbitmq.password | quote }}
+          {{- end }}
+        {{- end }}
+        {{- if .Values.celery.enabled }}
+        - name: CELERY_BROKER_URL
+          value: {{ .Values.celery.brokerUrl | quote }}
+        - name: CELERY_RESULT_BACKEND
+          value: {{ .Values.celery.resultBackend | quote }}
+        {{- end }}
         volumeMounts:
         - name: static-volume
           mountPath: /app/static
@@ -74,13 +146,78 @@ spec:
             name: {{ include "backend.fullname" . }}-config
         env:
         - name: POSTGRES_PASSWORD
+          {{- if .Values.externalSecrets.enabled }}
+          valueFrom:
+            secretKeyRef:
+              name: postgres-credentials
+              key: password
+          {{- else }}
           value: {{ .Values.secrets.postgresPassword | quote }}
+          {{- end }}
         - name: SECRET_KEY
+          {{- if .Values.externalSecrets.enabled }}
+          valueFrom:
+            secretKeyRef:
+              name: django-credentials
+              key: secret-key
+          {{- else }}
           value: {{ .Values.secrets.djangoSecretKey | quote }}
+          {{- end }}
         - name: DEBUG
+          {{- if .Values.externalSecrets.enabled }}
+          valueFrom:
+            secretKeyRef:
+              name: django-credentials
+              key: debug
+          {{- else }}
           value: {{ .Values.secrets.debug | quote }}
+          {{- end }}
         - name: ALLOWED_HOSTS
+          {{- if .Values.externalSecrets.enabled }}
+          valueFrom:
+            secretKeyRef:
+              name: django-credentials
+              key: allowed-hosts
+          {{- else }}
           value: {{ .Values.secrets.allowedHosts | quote }}
+          {{- end }}
+        {{- if .Values.redis.enabled }}
+        - name: REDIS_PASSWORD
+          {{- if .Values.externalSecrets.enabled }}
+          valueFrom:
+            secretKeyRef:
+              name: redis-credentials
+              key: password
+          {{- else }}
+          value: {{ .Values.redis.password | quote }}
+          {{- end }}
+        {{- end }}
+        {{- if .Values.rabbitmq.enabled }}
+        - name: RABBITMQ_USERNAME
+          {{- if .Values.externalSecrets.enabled }}
+          valueFrom:
+            secretKeyRef:
+              name: rabbitmq-credentials
+              key: username
+          {{- else }}
+          value: {{ .Values.rabbitmq.username | quote }}
+          {{- end }}
+        - name: RABBITMQ_PASSWORD
+          {{- if .Values.externalSecrets.enabled }}
+          valueFrom:
+            secretKeyRef:
+              name: rabbitmq-credentials
+              key: password
+          {{- else }}
+          value: {{ .Values.rabbitmq.password | quote }}
+          {{- end }}
+        {{- end }}
+        {{- if .Values.celery.enabled }}
+        - name: CELERY_BROKER_URL
+          value: {{ .Values.celery.brokerUrl | quote }}
+        - name: CELERY_RESULT_BACKEND
+          value: {{ .Values.celery.resultBackend | quote }}
+        {{- end }}
         volumeMounts:
         {{- if .Values.persistence.static.enabled }}
         - name: static-volume
