--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,4 @@
+# Updated to include pika for RabbitMQ integration
 gunicorn==23.0.0
 asgiref==3.8.1
 attrs==25.3.0
@@ -36,3 +37,9 @@ typing_extensions==4.14.0
 uritemplate==4.2.0
 urllib3==2.4.0
 psycopg2-binary
+redis==5.2.1
+hiredis==3.0.0
+pika==1.3.2
+python-dotenv==1.0.0
+celery==5.4.0
+flower==2.0.1
